simplify code for updating username work with ON UPDATE CASCADE & fixed selecting questionnaire responses
