# backend/src/app.js
@@ -61,7 +61,7 @@ app.post('/v0/postuser', gift.postUser);
 
 app.put('/v0/giftuser/:username', gift.putUser);
 
-app.get('/v0/getqresponse', gift.getQResponse); //openapi.yaml --> app.js --> gift.js --> db.js
+app.get('/v0/getqresponse/:username', gift.getQResponse); //openapi.yaml --> app.js --> gift.js --> db.js
 
 // Saves user responses from interest questionnaire on Create Account page.
 app.post('/v0/postqresponse', gift.postQResponse);
